--- a/css/style.scss
+++ b/css/style.scss
@@ -24,14 +24,14 @@ main{
   background-color: white;
   box-shadow: 0px 0px 4px;
   padding: 0;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: auto auto;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto auto auto auto auto;
   grid-gap: .5em;
   display: grid;
 
   .item-container-1{
-    grid-column: 1 / 5;
-    grid-row: 1;
+    grid-column: 1 / 7;
+    grid-row: 1 / 3;
     position: relative;
     background-color: grey;
     display: grid;
@@ -65,15 +65,32 @@ main{
       text-align: center;
       font-size: 1.5em;
     }
-  } /* CLOSES ITEM-CONTAINER-1 */
+  } /* CLOSES TITLE-CONTAINER */
 
   .item-container-2{
-    grid-column: 1 / 3;
+    grid-column: 1 / 4;
     position: relative;
   }
 
   .item-container-3{
-    grid-column: 3 / 5;
+    grid-column: 4 / 7;
+    position: relative;
+  }
+
+  .item-container-4{
+    grid-column: 1 / 7;
+    grid-row: 4 / 6;
+    position: relative;
+  }
+
+  .item-container-5{
+    grid-column: 1 / 4;
+    position: relative;
+
+  }
+
+  .item-container-6{
+    grid-column: 4 / 7;
     position: relative;
   }
 
@@ -133,3 +150,30 @@ img{
 }
 
 */
+
+
+
+@media (min-width: 576px) {
+  .item-container-1{
+    grid-column: 1 / 5!important;
+
+  }
+  .item-container-2{
+    grid-column: 5 / 7!important;
+    grid-row: 1 / 2;
+  }
+  .item-container-3{
+    grid-column: 5 / 7!important;
+    grid-row: 2 / 3;
+  }
+  .item-container-4{
+    grid-column: 1 / 5!important;
+    grid-row: 3 / 5!important;
+  }
+  .item-container-5{
+    grid-column: 5 / 7!important;
+  }
+  .item-container-6{
+    grid-column: 5 / 7!important;
+  }
+}
