--- a/css/style.scss
+++ b/css/style.scss
@@ -16,22 +16,25 @@ nav{
 
 article{
   background-color: white;
-  box-shadow: 0px 0px 4px;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, .16);
 }
 
-main{
+.main-container{
   margin-top: 10px;
   background-color: white;
-  box-shadow: 0px 0px 4px;
-  padding: 0;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, .16);
+  padding: 1em 0 0 0;
+}
+main{
+
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto auto auto auto auto;
   grid-gap: .5em;
   display: grid;
 
   .item-container-1{
-    grid-column: 1 / 7;
-    grid-row: 1 / 3;
+    grid-column: 1 / 5;
+
     position: relative;
     background-color: grey;
     display: grid;
@@ -68,30 +71,47 @@ main{
   } /* CLOSES TITLE-CONTAINER */
 
   .item-container-2{
-    grid-column: 1 / 4;
+    grid-column: 1 / 3;
     position: relative;
   }
 
   .item-container-3{
-    grid-column: 4 / 7;
+    grid-column: 3 / 5;
     position: relative;
   }
 
   .item-container-4{
-    grid-column: 1 / 7;
-    grid-row: 4 / 6;
+    grid-column: 1 / 5;
     position: relative;
   }
 
   .item-container-5{
-    grid-column: 1 / 4;
+    grid-column: 1 / 3;
     position: relative;
 
   }
 
   .item-container-6{
-    grid-column: 4 / 7;
+    grid-column: 3 / 5;
     position: relative;
+  }
+
+  .item-container-7{
+    grid-column: 1 / 5;
+    position: relative;
+
+  }
+
+  .item-container-8{
+    grid-column: 1 / 3;
+    position: relative;
+
+  }
+
+  .item-container-9{
+    grid-column: 3 / 5;
+    position: relative;
+
   }
 
 
@@ -151,29 +171,129 @@ img{
 
 */
 
+@media(min-width: 567px){
 
-
-@media (min-width: 576px) {
+main{
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto auto auto auto auto auto auto;
+}
   .item-container-1{
     grid-column: 1 / 5!important;
-
+    grid-row: 1 / 3!important;
+    position: relative;
   }
+
   .item-container-2{
     grid-column: 5 / 7!important;
-    grid-row: 1 / 2;
+    position: relative;
   }
+
   .item-container-3{
     grid-column: 5 / 7!important;
-    grid-row: 2 / 3;
+    position: relative;
   }
+
   .item-container-4{
-    grid-column: 1 / 5!important;
-    grid-row: 3 / 5!important;
+    grid-column: 1 / 5 !important;
+    grid-row: 3 / 5;
+    position: relative;
   }
+
   .item-container-5{
     grid-column: 5 / 7!important;
+    position: relative;
+
   }
+
   .item-container-6{
     grid-column: 5 / 7!important;
+    position: relative;
+  }
+
+  .item-container-7{
+    grid-column: 1 / 5!important;
+    grid-row: 5 / 7!important;
+    position: relative;
+
+  }
+
+  .item-container-8{
+    grid-column: 5 / 7!important;
+    position: relative;
+
+  }
+
+  .item-container-9{
+    grid-column: 5 / 7!important;
+    position: relative;
+
+  }
+}
+
+
+
+
+
+
+@media(min-width: 1200px){
+
+.main-container{
+  padding-right: 1em!important;
+}
+main{
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto auto auto auto auto auto auto;
+
+}
+  .item-container-1{
+    grid-column: 1 / 3!important;
+    grid-row: 1 / 3!important;
+    position: relative;
+  }
+
+  .item-container-2{
+    grid-column: 3 / 4!important;
+    position: relative;
+  }
+
+  .item-container-3{
+    grid-column: 4 / 5!important;
+    position: relative;
+  }
+
+  .item-container-4{
+    grid-column: 3 / 4 !important;
+    grid-row: 2 / 3!important;
+    position: relative;
+  }
+
+  .item-container-5{
+    grid-column: 4 / 5!important;
+    position: relative;
+
+  }
+
+  .item-container-6{
+    grid-column: 1 / 2!important;
+    position: relative;
+  }
+
+  .item-container-7{
+    grid-column: 2 / 3!important;
+    grid-row: 3 / 4!important;
+    position: relative;
+
+  }
+
+  .item-container-8{
+    grid-column: 1 / 2!important;
+    position: relative;
+
+  }
+
+  .item-container-9{
+    grid-column: 2 / 3!important;
+    position: relative;
+
   }
 }
