--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,16 @@
 body {
   background-color: #F2F2F2; }
 
+h1, h2 {
+  font-family: acherus_grotesquebold; }
+
+h3, h4 {
+  font-family: acherus_grotesquelight;
+  letter-spacing: .1em; }
+
+.col-fluid {
+  padding-right: 10px; }
+
 nav ul {
   list-style: none; }
   nav ul li {
@@ -8,7 +18,12 @@ nav ul {
 
 article {
   background-color: white;
-  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.16); }
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.16);
+  margin-top: 10px; }
+  article h1 {
+    margin-top: 16px; }
+  article p {
+    padding-bottom: 16px; }
 
 .main-container {
   margin-top: 10px;
@@ -21,7 +36,11 @@ main {
   grid-template-rows: auto auto auto auto auto;
   grid-gap: .5em;
   display: grid;
+  /* OPENS TITLE-CONTAINER */
   /* CLOSES TITLE-CONTAINER */ }
+  main h2 {
+    grid-column: 1 / 5;
+    grid-row: 1; }
   main .item-container-1 {
     grid-column: 1 / 5;
     position: relative;
@@ -45,11 +64,11 @@ main {
       color: white;
       text-align: center;
       margin-top: 38%;
-      font-size: 2.5em; }
+      font-size: 1.75em; }
     main .title-container h3 {
       color: white;
       text-align: center;
-      font-size: 1.5em; }
+      font-size: 1.25em; }
   main .item-container-2 {
     grid-column: 1 / 3;
     position: relative; }
@@ -129,10 +148,13 @@ img{
   main {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: auto auto auto auto auto auto auto; }
+    main h2 {
+      grid-column: 1 / 7;
+      grid-row: 1 !important; }
 
   .item-container-1 {
     grid-column: 1/5 !important;
-    grid-row: 1/3 !important;
+    grid-row: 2/4 !important;
     position: relative; }
 
   .item-container-2 {
@@ -145,7 +167,7 @@ img{
 
   .item-container-4 {
     grid-column: 1 / 5 !important;
-    grid-row: 3 / 5;
+    grid-row: 4 / 6;
     position: relative; }
 
   .item-container-5 {
@@ -158,7 +180,7 @@ img{
 
   .item-container-7 {
     grid-column: 1/5 !important;
-    grid-row: 5/7 !important;
+    grid-row: 6/8 !important;
     position: relative; }
 
   .item-container-8 {
@@ -175,44 +197,38 @@ img{
   main {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: auto auto auto auto auto auto auto; }
+    main h2 {
+      grid-column: 1 / 5;
+      grid-row: 1 !important; }
 
   .item-container-1 {
     grid-column: 1/3 !important;
-    grid-row: 1/3 !important;
+    grid-row: 2/4 !important;
     position: relative; }
 
   .item-container-2 {
     grid-column: 3/4 !important;
+    grid-row: 2/3 !important;
     position: relative; }
 
   .item-container-3 {
     grid-column: 4/5 !important;
+    grid-row: 2/3 !important;
     position: relative; }
 
   .item-container-4 {
     grid-column: 3 / 4 !important;
-    grid-row: 2/3 !important;
+    grid-row: 3/4 !important;
     position: relative; }
 
   .item-container-5 {
     grid-column: 4/5 !important;
+    grid-row: 3/4 !important;
     position: relative; }
 
   .item-container-6 {
     grid-column: 1/2 !important;
-    position: relative; }
-
-  .item-container-7 {
-    grid-column: 2/3 !important;
-    grid-row: 3/4 !important;
-    position: relative; }
-
-  .item-container-8 {
-    grid-column: 1/2 !important;
-    position: relative; }
-
-  .item-container-9 {
-    grid-column: 2/3 !important;
-    position: relative; } }
+    position: relative;
+    display: none; } }
 
 /*# sourceMappingURL=style.css.map */
