--- a/css/style.scss
+++ b/css/style.scss
@@ -4,6 +4,18 @@ body{
   background-color: $light-grey;
 }
 
+h1, h2{
+  font-family: acherus_grotesquebold;
+}
+
+h3, h4{
+  font-family: acherus_grotesquelight;
+  letter-spacing: .1em;
+}
+
+.col-fluid{
+  padding-right: 10px;
+}
 
 nav{
   ul{
@@ -17,6 +29,13 @@ nav{
 article{
   background-color: white;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, .16);
+  margin-top: 10px;
+  h1{
+    margin-top: 16px;
+  }
+  p{
+    padding-bottom: 16px;
+  }
 }
 
 .main-container{
@@ -25,12 +44,18 @@ article{
   box-shadow: 0px 0px 4px rgba(0, 0, 0, .16);
   padding: 1em 0 0 0;
 }
+
 main{
 
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto auto auto auto auto;
   grid-gap: .5em;
   display: grid;
+
+  h2{
+    grid-column: 1 / 5;
+    grid-row: 1;
+  }
 
   .item-container-1{
     grid-column: 1 / 5;
@@ -43,6 +68,9 @@ main{
     width: 100%;
     height: auto;
   }
+
+
+  /* OPENS TITLE-CONTAINER */
   .title-container{
     height: 100%;
     width: 100%;
@@ -61,12 +89,12 @@ main{
       color: white;
       text-align: center;
       margin-top: 38%;
-      font-size: 2.5em;
+      font-size: 1.75em;
     }
     h3{
       color: white;
       text-align: center;
-      font-size: 1.5em;
+      font-size: 1.25em;
     }
   } /* CLOSES TITLE-CONTAINER */
 
@@ -176,10 +204,15 @@ img{
 main{
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: auto auto auto auto auto auto auto;
+
+  h2{
+    grid-column: 1 / 7;
+    grid-row: 1!important;
+  }
 }
   .item-container-1{
     grid-column: 1 / 5!important;
-    grid-row: 1 / 3!important;
+    grid-row: 2 / 4!important;
     position: relative;
   }
 
@@ -195,7 +228,7 @@ main{
 
   .item-container-4{
     grid-column: 1 / 5 !important;
-    grid-row: 3 / 5;
+    grid-row: 4 / 6;
     position: relative;
   }
 
@@ -212,7 +245,7 @@ main{
 
   .item-container-7{
     grid-column: 1 / 5!important;
-    grid-row: 5 / 7!important;
+    grid-row: 6 / 8!important;
     position: relative;
 
   }
@@ -244,31 +277,38 @@ main{
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto auto auto auto auto auto auto;
 
+  h2{
+    grid-column: 1 / 5;
+    grid-row: 1!important;
+  }
 }
   .item-container-1{
     grid-column: 1 / 3!important;
-    grid-row: 1 / 3!important;
+    grid-row: 2 / 4!important;
     position: relative;
   }
 
   .item-container-2{
     grid-column: 3 / 4!important;
+    grid-row: 2 / 3!important;
     position: relative;
   }
 
   .item-container-3{
     grid-column: 4 / 5!important;
+    grid-row: 2 / 3!important;
     position: relative;
   }
 
   .item-container-4{
     grid-column: 3 / 4 !important;
-    grid-row: 2 / 3!important;
+    grid-row: 3 / 4!important;
     position: relative;
   }
 
   .item-container-5{
     grid-column: 4 / 5!important;
+    grid-row: 3 / 4!important;
     position: relative;
 
   }
@@ -276,24 +316,8 @@ main{
   .item-container-6{
     grid-column: 1 / 2!important;
     position: relative;
+    display: none;
   }
 
-  .item-container-7{
-    grid-column: 2 / 3!important;
-    grid-row: 3 / 4!important;
-    position: relative;
 
-  }
-
-  .item-container-8{
-    grid-column: 1 / 2!important;
-    position: relative;
-
-  }
-
-  .item-container-9{
-    grid-column: 2 / 3!important;
-    position: relative;
-
-  }
 }
