--- a/css/style.css
+++ b/css/style.css
@@ -11,22 +11,37 @@ h3, h4 {
 .col-fluid {
   padding-right: 10px; }
 
-nav ul {
-  list-style: none; }
-  nav ul li {
-    float: left; }
+nav {
+  padding: 16px;
+  margin: 0; }
+  nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0; }
+    nav ul li {
+      float: left; }
+      nav ul li a {
+        color: black;
+        font-family: acherus_grotesquelight;
+        font-size: 1.1em; }
+
+#active {
+  font-family: acherus_grotesquebold; }
 
 article {
   background-color: white;
-  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.16);
-  margin-top: 10px; }
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.16); }
   article h1 {
     margin-top: 16px; }
   article p {
     padding-bottom: 16px; }
 
+.logo {
+  max-width: 75px; }
+
 .main-container {
   margin-top: 10px;
+  margin-bottom: 10px;
   background-color: white;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.16);
   padding: 1em 0 0 0; }
@@ -191,8 +206,15 @@ img{
     grid-column: 5/7 !important;
     position: relative; } }
 @media (min-width: 1200px) {
+  .logo-container {
+    margin-top: 26px;
+    margin-bottom: 75px; }
+
   .main-container {
     padding-right: 1em !important; }
+
+  article {
+    margin-top: 10px !important; }
 
   main {
     grid-template-columns: 1fr 1fr 1fr 1fr;
