--- a/css/style.scss
+++ b/css/style.scss
@@ -18,18 +18,31 @@ h3, h4{
 }
 
 nav{
+  padding: 16px;
+  margin: 0;
   ul{
     list-style: none;
+    padding: 0;
+    margin: 0;
     li{
       float: left;
+      a{
+        color: black;
+        font-family: acherus_grotesquelight;
+        font-size: 1.1em;
+      }
     }
   }
+}
+
+#active{
+  font-family: acherus_grotesquebold;
 }
 
 article{
   background-color: white;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, .16);
-  margin-top: 10px;
+
   h1{
     margin-top: 16px;
   }
@@ -38,8 +51,13 @@ article{
   }
 }
 
+.logo{
+  max-width: 75px;
+}
+
 .main-container{
   margin-top: 10px;
+  margin-bottom: 10px;
   background-color: white;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, .16);
   padding: 1em 0 0 0;
@@ -270,9 +288,19 @@ main{
 
 @media(min-width: 1200px){
 
+  .logo-container{
+    margin-top: 26px;
+    margin-bottom: 75px;
+  }
+
 .main-container{
   padding-right: 1em!important;
 }
+
+article{
+  margin-top: 10px!important;
+}
+
 main{
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto auto auto auto auto auto auto;
