--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,16 @@ article {
   article p {
     padding-bottom: 16px; }
 
+footer ul {
+  width: 100%;
+  list-style: none;
+  margin: 0;
+  padding: 0; }
+  footer ul li {
+    width: 45px;
+    float: left;
+    margin: 10px; }
+
 .logo {
   max-width: 75px; }
 
@@ -217,8 +227,8 @@ img{
   nav {
     position: fixed !important; }
     nav li {
-      margin-top: 16px; } }
-@media (min-width: 1200px) {
+      margin-top: 16px; }
+
   .logo-container {
     margin-top: 26px;
     margin-bottom: 75px; }
