--- a/css/style.scss
+++ b/css/style.scss
@@ -51,6 +51,20 @@ article{
   }
 }
 
+footer{
+  ul{
+    width: 100%;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    li{
+      width: 45px;
+      float: left;
+      margin: 10px;
+    }
+  }
+}
+
 .logo{
   max-width: 75px;
 }
@@ -281,32 +295,31 @@ main{
   }
 }
 
+
+
+
+
+
+
 @media(min-width: 992px){
 
-  .logo-container{
-    margin-top: 26px;
-    margin-bottom: 75px;
+
+    .logo-container{
+      margin-top: 26px;
+      margin-bottom: 75px;
+    }
+
+    article{
+      margin-top: 10px!important;
+      float: right!important;
+    }
+
+  nav{
+    position: fixed!important;
+    li{
+      margin-top: 16px;
+    }
   }
-
-  article{
-    margin-top: 10px!important;
-    float: right!important;
-  }
-
-nav{
-  position: fixed!important;
-  li{
-    margin-top: 16px;
-  }
-}
-}
-
-
-
-
-
-
-@media(min-width: 1200px){
 
   .logo-container{
     margin-top: 26px;
