--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,8 @@ nav {
         color: black;
         font-family: acherus_grotesquelight;
         font-size: 1.1em; }
+  nav .social-media-xl {
+    display: none; }
 
 #active {
   font-family: acherus_grotesquebold; }
@@ -39,7 +41,7 @@ article {
 footer ul {
   width: 100%;
   list-style: none;
-  margin: 0;
+  margin: 0 0 0 10px;
   padding: 0; }
   footer ul li {
     width: 45px;
@@ -224,19 +226,19 @@ img{
     margin-top: 10px !important;
     float: right !important; }
 
-  nav {
-    position: fixed !important; }
-    nav li {
-      margin-top: 16px; }
-
   .logo-container {
     margin-top: 26px;
-    margin-bottom: 75px; }
+    margin-bottom: 10vh; }
 
   nav {
     position: fixed !important; }
     nav li {
       margin-top: 16px; }
+    nav .social-media-xl {
+      margin-top: 10vh;
+      display: inline-block; }
+      nav .social-media-xl img {
+        height: 35px; }
 
   .main-container {
     padding-right: 1em !important; }
@@ -247,6 +249,9 @@ img{
     main h2 {
       grid-column: 1 / 5;
       grid-row: 1 !important; }
+
+  footer {
+    display: none; }
 
   .item-container-1 {
     grid-column: 1/3 !important;
