--- a/css/style.scss
+++ b/css/style.scss
@@ -33,6 +33,9 @@ nav{
       }
     }
   }
+  .social-media-xl{
+    display: none;
+  }
 }
 
 #active{
@@ -55,7 +58,7 @@ footer{
   ul{
     width: 100%;
     list-style: none;
-    margin: 0;
+    margin: 0 0 0 10px;
     padding: 0;
     li{
       width: 45px;
@@ -314,22 +317,24 @@ main{
       float: right!important;
     }
 
-  nav{
-    position: fixed!important;
-    li{
-      margin-top: 16px;
-    }
-  }
 
   .logo-container{
     margin-top: 26px;
-    margin-bottom: 75px;
+    margin-bottom: 10vh;
   }
 
 nav{
   position: fixed!important;
   li{
     margin-top: 16px;
+  }
+
+  .social-media-xl{
+    margin-top: 10vh;
+    display: inline-block;
+    img{
+      height: 35px;
+    }
   }
 }
 
@@ -345,6 +350,10 @@ main{
     grid-column: 1 / 5;
     grid-row: 1!important;
   }
+}
+
+footer{
+  display: none;
 }
   .item-container-1{
     grid-column: 1 / 3!important;
