--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,12 @@ nav {
       nav ul li a {
         color: black;
         font-family: acherus_grotesquelight;
-        font-size: 1.1em; }
+        font-size: 1.1em;
+        transition: ease .4s; }
+      nav ul li a:hover {
+        text-decoration: none;
+        opacity: .5;
+        color: black; }
   nav .social-media-xl {
     display: none; }
 
@@ -67,7 +72,8 @@ main {
   /* CLOSES TITLE-CONTAINER */ }
   main h2 {
     grid-column: 1 / 5;
-    grid-row: 1; }
+    grid-row: 1;
+    font-size: 1.5em; }
   main .item-container-1 {
     grid-column: 1 / 5;
     position: relative;
