--- a/css/style.scss
+++ b/css/style.scss
@@ -30,6 +30,12 @@ nav{
         color: black;
         font-family: acherus_grotesquelight;
         font-size: 1.1em;
+        transition: ease .4s;
+      }
+      a:hover{
+        text-decoration: none;
+        opacity: .5;
+        color: black;
       }
     }
   }
@@ -90,6 +96,7 @@ main{
   h2{
     grid-column: 1 / 5;
     grid-row: 1;
+    font-size: 1.5em;
   }
 
   .item-container-1{
