--- a/css/style.scss
+++ b/css/style.scss
@@ -13,6 +13,10 @@ h3, h4{
   letter-spacing: .1em;
 }
 
+p{
+  font-family: acherus_grotesque_regularRg;
+}
+
 .col-fluid{
   padding-right: 10px;
 }
@@ -53,10 +57,12 @@ article{
   box-shadow: 0px 0px 4px rgba(0, 0, 0, .16);
 
   h1{
-    margin-top: 16px;
+    margin-top: 32px;
+    font-size: 1.75em;
+    letter-spacing: .10em;
   }
   p{
-    padding-bottom: 16px;
+    padding-bottom: 32px;
   }
 }
 
@@ -97,6 +103,7 @@ main{
     grid-column: 1 / 5;
     grid-row: 1;
     font-size: 1.5em;
+    letter-spacing: .10em;
   }
 
   .item-container-1{
