--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,10 @@ main {
   background-color: white;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.16);
   padding: 1em 0 0 0; }
+  .featured-blogs h2 {
+    margin-top: 32px; }
+  .featured-blogs p {
+    margin-bottom: 32px; }
 
 /* BOOTSTRAP
 .item-container{
