--- a/css/style.scss
+++ b/css/style.scss
@@ -208,6 +208,12 @@ div:hover{
   background-color: white;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, .16);
   padding: 1em 0 0 0;
+  h2{
+    margin-top: 32px;
+  }
+  p{
+    margin-bottom: 32px;
+  }
 }
 
 /* BOOTSTRAP
