--- a/css/style.scss
+++ b/css/style.scss
@@ -127,13 +127,14 @@ main{
     background-color: black;
     position: absolute;
     opacity: 0;
+    z-index: 1!important;
 
     a{
       height: 100%;
       width: 100%;
-      z-index: 10;
       position: absolute;
-      display: none;
+      z-index: -10!important;
+      transition-delay: 1s;
     }
 
     h2{
@@ -202,7 +203,8 @@ div:hover{
   .title-container{
     opacity: 1;
     a{
-      display: block;
+      z-index: 5;
+      opacity: 0;
     }
   }
 }
