--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,8 @@ main {
     display: grid; }
   main img {
     width: 100%;
-    height: auto; }
+    height: auto;
+    z-index: 0; }
   main .title-container {
     height: 100%;
     width: 100%;
@@ -142,7 +143,8 @@ main {
     opacity: 1; }
     main div:hover .title-container a {
       z-index: 5;
-      opacity: 0; }
+      opacity: 0;
+      transition-delay: 1s !important; }
 
 /* CLOSES MAIN */
 .featured-blogs {
