--- a/css/style.scss
+++ b/css/style.scss
@@ -117,6 +117,7 @@ main{
   img{
     width: 100%;
     height: auto;
+    z-index: 0;
   }
 
 
@@ -205,6 +206,7 @@ div:hover{
     a{
       z-index: 5;
       opacity: 0;
+      transition-delay: 1s!important;
     }
   }
 }
