--- a/css/style.css
+++ b/css/style.css
@@ -96,13 +96,12 @@ main {
     background-color: black;
     position: absolute;
     opacity: 0;
-    z-index: 1 !important; }
+    z-index: -10; }
     main .title-container a {
       height: 100%;
       width: 100%;
       position: absolute;
-      z-index: -10 !important;
-      transition-delay: 1s; }
+      z-index: 1 !important; }
     main .title-container h2 {
       color: white;
       text-align: center;
@@ -138,13 +137,10 @@ main {
     position: relative; }
   main div {
     transition: .4s ease;
-    transition-delay: .2s; }
+    transition-delay: .05s; }
   main div:hover .title-container {
-    opacity: 1; }
-    main div:hover .title-container a {
-      z-index: 5;
-      opacity: 1;
-      transition-delay: 1s !important; }
+    opacity: 1;
+    z-index: 10; }
 
 /* CLOSES MAIN */
 .featured-blogs {
