--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,6 @@ h3, h4 {
 p {
   font-family: acherus_grotesque_regularRg; }
 
-.col-fluid {
-  padding-right: 10px;
-  padding-left: 10px; }
-
 nav {
   padding: 16px;
   margin: 0; }
@@ -41,6 +37,11 @@ nav {
 #active {
   font-family: acherus_grotesquebold; }
 
+.logo-container {
+  width: 75px; }
+  .logo-container img {
+    width: 50px; }
+
 article {
   background-color: white;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.16); }
@@ -61,9 +62,6 @@ footer ul {
     float: left;
     margin: 10px; }
 
-.logo {
-  max-width: 75px; }
-
 .main-container {
   margin-top: 10px;
   margin-bottom: 10px;
@@ -75,6 +73,7 @@ main {
   grid-template-rows: auto auto auto auto auto;
   grid-gap: .5em;
   display: grid;
+  padding-bottom: 32px;
   /* OPENS TITLE-CONTAINER */
   /* CLOSES TITLE-CONTAINER */ }
   main h2 {
@@ -199,6 +198,10 @@ img{
 
 */
 @media (min-width: 567px) {
+  .col-fluid {
+    padding-right: 10px;
+    padding-left: 10px; }
+
   main {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: auto auto auto auto auto auto auto; }
@@ -247,7 +250,8 @@ img{
 @media (min-width: 992px) {
   .logo-container {
     margin-top: 26px;
-    margin-bottom: 75px; }
+    margin-bottom: 75px;
+    width: 100%; }
 
   article {
     margin-top: 10px !important;
