--- a/css/style.scss
+++ b/css/style.scss
@@ -19,11 +19,6 @@ p{
   font-family: acherus_grotesque_regularRg;
 }
 
-.col-fluid{
-  padding-right: 10px;
-  padding-left: 10px;
-}
-
 nav{
   padding: 16px;
   margin: 0;
@@ -55,6 +50,14 @@ nav{
   font-family: acherus_grotesquebold;
 }
 
+.logo-container{
+
+  width: 75px;
+  img{
+    width: 50px;
+  }
+}
+
 article{
   background-color: white;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, .16);
@@ -83,10 +86,6 @@ footer{
   }
 }
 
-.logo{
-  max-width: 75px;
-}
-
 .main-container{
   margin-top: 10px;
   margin-bottom: 10px;
@@ -100,6 +99,7 @@ main{
   grid-template-rows: auto auto auto auto auto;
   grid-gap: .5em;
   display: grid;
+  padding-bottom: 32px;
 
   h2{
     grid-column: 1 / 5;
@@ -272,6 +272,11 @@ img{
 
 @media(min-width: 567px){
 
+  .col-fluid{
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+
 main{
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: auto auto auto auto auto auto auto;
@@ -346,6 +351,7 @@ main{
     .logo-container{
       margin-top: 26px;
       margin-bottom: 75px;
+      width: 100%;
     }
 
     article{
