--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,10 @@ nav {
   .logo-container img {
     width: 50px; }
 
+.container-fluid {
+  padding-right: 0;
+  padding-left: 0; }
+
 article {
   background-color: white;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.16); }
@@ -55,7 +59,6 @@ article {
 footer ul {
   width: 100%;
   list-style: none;
-  margin: 0 0 0 10px;
   padding: 0; }
   footer ul li {
     width: 45px;
@@ -141,15 +144,65 @@ main {
     z-index: 10; }
 
 /* CLOSES MAIN */
+.featured-blogs-container {
+  padding: 0; }
+
 .featured-blogs {
   margin-bottom: 10px;
   background-color: white;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.16);
-  padding: 1em 0 0 0; }
+  padding: 32px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto 1fr 1fr;
+  display: grid;
+  grid-gap: .5em;
+  /* OPENS ITEM CONTAINERS */
+  /* CLOSES ITEM CONTAINERS */
+  /* OPENS TITLE-CONTAINER */
+  /* CLOSES TITLE-CONTAINER */ }
+  .featured-blogs h2 {
+    grid-column: 1 / 5; }
+  .featured-blogs .item-container-1 {
+    grid-column: 1 / 3;
+    position: relative; }
+  .featured-blogs .item-container-2 {
+    grid-column: 3 / 5;
+    position: relative; }
+  .featured-blogs .item-container-3 {
+    grid-column: 1 / 3;
+    position: relative; }
+  .featured-blogs .item-container-4 {
+    grid-column: 3 / 5;
+    position: relative; }
   .featured-blogs h2 {
     margin-top: 32px; }
   .featured-blogs p {
     margin-bottom: 32px; }
+  .featured-blogs img {
+    width: 100%;
+    height: auto;
+    z-index: 0; }
+  .featured-blogs .title-container {
+    height: 100%;
+    width: 100%;
+    background-color: black;
+    position: absolute;
+    opacity: 0;
+    z-index: -10; }
+    .featured-blogs .title-container a {
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      z-index: 1 !important; }
+    .featured-blogs .title-container h2 {
+      color: white;
+      text-align: center;
+      margin-top: 38%;
+      font-size: 1.75em; }
+    .featured-blogs .title-container h3 {
+      color: white;
+      text-align: center;
+      font-size: 1.25em; }
 
 /* BOOTSTRAP
 .item-container{
@@ -197,10 +250,6 @@ img{
 
 */
 @media (min-width: 567px) {
-  .col-fluid {
-    padding-right: 10px;
-    padding-left: 10px; }
-
   main {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: auto auto auto auto auto auto auto; }
