--- a/css/style.scss
+++ b/css/style.scss
@@ -58,6 +58,12 @@ nav{
   }
 }
 
+
+.container-fluid{
+  padding-right: 0;
+  padding-left: 0;
+}
+
 article{
   background-color: white;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, .16);
@@ -76,7 +82,7 @@ footer{
   ul{
     width: 100%;
     list-style: none;
-    margin: 0 0 0 10px;
+
     padding: 0;
     li{
       width: 45px;
@@ -211,18 +217,93 @@ div:hover{
 }
 } /* CLOSES MAIN */
 
+.featured-blogs-container{
+padding: 0;
+}
+
 .featured-blogs{
   margin-bottom: 10px;
   background-color: white;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, .16);
-  padding: 1em 0 0 0;
+padding: 32px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto 1fr 1fr;
+  display: grid;
+  grid-gap: .5em;
+
+/* OPENS ITEM CONTAINERS */
+
+h2{
+  grid-column: 1 / 5;
+}
+
+.item-container-1{
+  grid-column: 1 / 3;
+  position: relative;
+}
+  .item-container-2{
+    grid-column: 3 / 5;
+    position: relative;
+  }
+
+  .item-container-3{
+    grid-column: 1 / 3;
+    position: relative;
+  }
+
+  .item-container-4{
+    grid-column: 3 / 5;
+    position: relative;
+  }
+
+/* CLOSES ITEM CONTAINERS */
+
   h2{
     margin-top: 32px;
   }
   p{
     margin-bottom: 32px;
   }
+
+  img{
+    width: 100%;
+    height: auto;
+    z-index: 0;
+  }
+
+
+  /* OPENS TITLE-CONTAINER */
+  .title-container{
+    height: 100%;
+    width: 100%;
+    background-color: black;
+    position: absolute;
+    opacity: 0;
+    z-index: -10;
+
+    a{
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      z-index: 1!important;
+    }
+
+    h2{
+      color: white;
+      text-align: center;
+      margin-top: 38%;
+      font-size: 1.75em;
+    }
+    h3{
+      color: white;
+      text-align: center;
+      font-size: 1.25em;
+    }
+  } /* CLOSES TITLE-CONTAINER */
+
 }
+
+
 
 /* BOOTSTRAP
 .item-container{
@@ -272,10 +353,7 @@ img{
 
 @media(min-width: 567px){
 
-  .col-fluid{
-    padding-right: 10px;
-    padding-left: 10px;
-  }
+
 
 main{
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
