--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ main {
 .featured-blogs-container {
   padding: 0; }
 
-.featured-blogs {
+#featured-blogs {
   margin-bottom: 10px;
   background-color: white;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.16);
@@ -160,46 +160,46 @@ main {
   /* CLOSES ITEM CONTAINERS */
   /* OPENS TITLE-CONTAINER */
   /* CLOSES TITLE-CONTAINER */ }
-  .featured-blogs h2 {
+  #featured-blogs h2 {
     grid-column: 1 / 5; }
-  .featured-blogs .item-container-1 {
+  #featured-blogs .item-container-1 {
     grid-column: 1 / 3;
     position: relative; }
-  .featured-blogs .item-container-2 {
+  #featured-blogs .item-container-2 {
     grid-column: 3 / 5;
     position: relative; }
-  .featured-blogs .item-container-3 {
+  #featured-blogs .item-container-3 {
     grid-column: 1 / 3;
     position: relative; }
-  .featured-blogs .item-container-4 {
+  #featured-blogs .item-container-4 {
     grid-column: 3 / 5;
     position: relative; }
-  .featured-blogs h2 {
+  #featured-blogs h2 {
     margin-top: 32px; }
-  .featured-blogs p {
+  #featured-blogs p {
     margin-bottom: 32px; }
-  .featured-blogs img {
+  #featured-blogs img {
     width: 100%;
     height: auto;
     z-index: 0; }
-  .featured-blogs .title-container {
+  #featured-blogs .title-container {
     height: 100%;
     width: 100%;
     background-color: black;
     position: absolute;
     opacity: 0;
     z-index: -10; }
-    .featured-blogs .title-container a {
+    #featured-blogs .title-container a {
       height: 100%;
       width: 100%;
       position: absolute;
       z-index: 1 !important; }
-    .featured-blogs .title-container h2 {
+    #featured-blogs .title-container h2 {
       color: white;
       text-align: center;
       margin-top: 38%;
       font-size: 1.75em; }
-    .featured-blogs .title-container h3 {
+    #featured-blogs .title-container h3 {
       color: white;
       text-align: center;
       font-size: 1.25em; }
@@ -250,6 +250,21 @@ img{
 
 */
 @media (min-width: 567px) {
+  #featured-blogs h2 {
+    grid-column: 1 / 5; }
+  #featured-blogs .item-container-1 {
+    grid-column: 1 / 2;
+    position: relative; }
+  #featured-blogs .item-container-2 {
+    grid-column: 2 / 3;
+    position: relative; }
+  #featured-blogs .item-container-3 {
+    grid-column: 3 / 4;
+    position: relative; }
+  #featured-blogs .item-container-4 {
+    grid-column: 4 / 5;
+    position: relative; }
+
   main {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: auto auto auto auto auto auto auto; }
