--- a/css/style.scss
+++ b/css/style.scss
@@ -221,7 +221,7 @@ div:hover{
 padding: 0;
 }
 
-.featured-blogs{
+#featured-blogs{
   margin-bottom: 10px;
   background-color: white;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, .16);
@@ -353,6 +353,29 @@ img{
 
 @media(min-width: 567px){
 
+#featured-blogs{
+  h2{
+    grid-column: 1 / 5;
+  }
+  .item-container-1{
+    grid-column: 1 / 2;
+    position: relative;
+  }
+    .item-container-2{
+      grid-column: 2 / 3;
+      position: relative;
+    }
+
+    .item-container-3{
+      grid-column: 3 / 4;
+      position: relative;
+    }
+
+    .item-container-4{
+      grid-column: 4 / 5;
+      position: relative;
+    }
+}
 
 
 main{
