--- a/css/style.scss
+++ b/css/style.scss
@@ -353,26 +353,37 @@ img{
 
 @media(min-width: 567px){
 
+  .container-fluid{
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+
 #featured-blogs{
+  grid-template-rows: auto 1fr !important;
   h2{
-    grid-column: 1 / 5;
+    grid-column: 1 / 5!important;
+    grid-row: 1 / 2;
   }
   .item-container-1{
-    grid-column: 1 / 2;
+    grid-column: 1 / 2!important;
+    grid-row: 2 / 3!important;
     position: relative;
   }
     .item-container-2{
-      grid-column: 2 / 3;
+      grid-column: 2 / 3!important;
+      grid-row: 2 / 3!important;
       position: relative;
     }
 
     .item-container-3{
-      grid-column: 3 / 4;
+      grid-column: 3 / 4!important;
+      grid-row: 2 / 3!important;
       position: relative;
     }
 
     .item-container-4{
-      grid-column: 4 / 5;
+      grid-column: 4 / 5!important;
+      grid-row: 2 / 3!important;
       position: relative;
     }
 }
