--- a/css/style.scss
+++ b/css/style.scss
@@ -459,6 +459,10 @@ main{
 
 @media(min-width: 992px){
 
+#modal{
+  min-width: 80vw!important;
+  margin-left: 17.5vw;
+}
 
     .logo-container{
       margin-top: 26px;
