--- a/css/style.css
+++ b/css/style.css
@@ -152,9 +152,23 @@ footer ul {
   padding-bottom: 32px;
   /* OPENS TITLE-CONTAINER */
   /* CLOSES TITLE-CONTAINER */ }
-  #main-catalog h2 {
+  #main-catalog h1 {
     grid-column: 1/5 !important;
     margin-top: 32px; }
+  #main-catalog ul {
+    grid-column: 1/5 !important;
+    list-style: none;
+    margin-left: 0;
+    padding: 0; }
+    #main-catalog ul li {
+      float: left;
+      margin-right: 5vw; }
+      #main-catalog ul li a {
+        color: black;
+        transition: ease .4s; }
+      #main-catalog ul li a:hover {
+        text-decoration: none;
+        opacity: .5; }
   #main-catalog .item-container-1 {
     grid-column: 1/3 !important;
     position: relative; }
@@ -288,6 +302,10 @@ footer ul {
   margin-top: 15px; }
   #modal img {
     padding: 4px; }
+
+/* CATALOG-SUBNAV */
+#active-category {
+  font-family: acherus_grotesquebold; }
 
 @media (min-width: 567px) {
   .container-fluid {
@@ -424,9 +442,7 @@ footer ul {
     /* OPENS TITLE-CONTAINER */
     /* CLOSES TITLE-CONTAINER */ }
     #main-catalog h2 {
-      grid-column: 1 / 5;
-      grid-row: 1;
-      margin-top: 32px; }
+      grid-column: 1 / 5; }
     #main-catalog img {
       width: 100%;
       height: auto;
