--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,10 @@ nav {
   .logo-container img {
     width: 50px; }
 
+.nav-item {
+  padding: 5px !important;
+  margin-top: 16px; }
+
 .container-fluid {
   padding-right: 0;
   padding-left: 0; }
