--- a/css/style.scss
+++ b/css/style.scss
@@ -231,7 +231,7 @@ div:hover{
   grid-template-rows: auto auto auto auto auto;
   grid-gap: .5em;
   display: grid;
-  padding-bottom: 32px;
+  padding-bottom: 32px!important;
 
 h1{
   grid-column: 1 / 5!important;
