cart on catalog page

--- a/css/style.css
+++ b/css/style.css
@@ -430,6 +430,9 @@ footer ul {
       nav .social-media-xl img {
         height: 35px; }
 
+  .cart #product-component-1594140064166 {
+    display: none; }
+
   .main-home {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: auto auto auto auto auto auto auto; }
