--- a/css/style.scss
+++ b/css/style.scss
@@ -677,7 +677,9 @@ nav{
   }
 }
 
-
+.cart #product-component-1594140064166 {
+   display: none;
+}
 
 .main-home{
   grid-template-columns: 1fr 1fr 1fr 1fr;
