--- a/css/style.scss
+++ b/css/style.scss
@@ -677,8 +677,11 @@ nav{
   }
 }
 
-.cart #product-component-1594140064166 {
+
+.catalog{
+div#product-component-1594140064166 {
    display: none;
+}
 }
 
 .main-home{
