--- a/css/style.css
+++ b/css/style.css
@@ -430,7 +430,7 @@ footer ul {
       nav .social-media-xl img {
         height: 35px; }
 
-  .cart #product-component-1594140064166 {
+  .catalog div#product-component-1594140064166 {
     display: none; }
 
   .main-home {
