--- a/css/style.scss
+++ b/css/style.scss
@@ -43,7 +43,6 @@ nav{
   }
 }
 
-
 #active{
   font-family: acherus_grotesquebold;
 }
@@ -103,9 +102,12 @@ footer{
   box-shadow: 0px 0px 4px rgba(0, 0, 0, .16);
   padding: 0!important;
   overflow: hidden;
-
-
 }
+
+.article-p{
+  padding-bottom: 25px!important;
+}
+
 
 .main-home{
 max-width: 100%;
