--- a/css/style.scss
+++ b/css/style.scss
@@ -273,6 +273,14 @@ h1{
     z-index: 0;
   }
 
+  video{
+    width: 100%;
+    z-index: 0;
+    padding: 0;
+    margin: 0!important;
+
+  }
+
 
   /* OPENS TITLE-CONTAINER */
   .title-container{
