--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,11 @@ footer ul {
     width: 100%;
     height: auto;
     z-index: 0; }
+  .main-catalog video {
+    width: 100%;
+    z-index: 0;
+    padding: 0;
+    margin: 0 !important; }
   .main-catalog .title-container {
     height: 100%;
     width: 100%;
